# sigmalint

./: .editorconfig  .gitignore  .importlinter.cfg  .pre-commit-config.yaml  .sigmalintrc.example.yml  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_rule_proposal.yml
.github/scripts/: apply-branch-protection.sh  branch-protection.json
.github/workflows/: ci.yml  external-corpus.yml  release.yml  self-lint.yml
docs/: architecture.md  configuration.md  maintainers.md  profiles.md  scoring.md  versioning.md
docs/analysis/: 2026-05-23-sigmahq-corpus.md
docs/history/: 2026-05-23-design-spec.md
docs/plans/: 2026-05-23-sigmalint-v0.1.md
docs/rules/: ATK001.md  ATK002.md  ATK003.md  ATK004.md  FP001.md  FP002.md  FP003.md  FP004.md  INTERNAL001.md  META001a.md  META001b.md  META002.md  META003.md  META004.md  META005.md  RED001.md  RED002.md  SCHEMA001.md  SCHEMA002.md  SCHEMA003.md  SCHEMA004.md  STY001.md  STY002.md  STY003.md  TAX001.md  TAX002.md  TAX003.md
docs/superpowers/specs/: 2026-05-23-sigmalint-design.md
scripts/: analyze_corpus.py  seeded_defect_benchmark.py
src/sigmalint/: __init__.py
src/sigmalint/cli/: main.py  update_data.py
src/sigmalint/core/: condition.py  config.py  errors.py  filters.py  profiles.py  registry.py  rule.py  runner.py  scoring.py  types.py
src/sigmalint/data/: attack.py  corpus.py  sigma_schema.py  taxonomy.py
src/sigmalint/reporting/: github.py  json.py  model.py  sarif.py  text.py
src/sigmalint/rules/: attack.py  fp_risk.py  metadata.py  redundancy.py  schema.py  style.py  taxonomy.py
tests/: conftest.py  test_smoke.py
tests/contrived/: test_contrived.py
tests/contrived/TAX001/: edge_condition_only.yml  edge_empty_detection.yml  edge_empty_selector.yml  edge_list_of_non_dict_items.yml  edge_selector_is_string_literal.yml  manifest.yml  neg_custom_taxonomy.yml  neg_dict_known_field.yml  neg_known_field_with_modifier.yml  neg_list_of_dict_known_fields.yml  neg_no_logsource_block.yml  neg_unknown_logsource_category.yml  pos_dict_unknown_field.yml  pos_dict_unknown_with_modifier.yml  pos_list_of_dict_unknown_field.yml  pos_list_of_dict_unknown_with_modifier.yml  pos_mixed_dict_and_list_of_dict.yml  pos_multiple_unknown_fields.yml
tests/contrived/TAX002/: edge_double_pipe.yml  edge_empty_detection.yml  manifest.yml  neg_chained_known_modifiers.yml  neg_dict_known_modifier.yml  neg_list_of_dict_known_modifier.yml  neg_no_modifier.yml  neg_unknown_field_known_modifier.yml  pos_chained_one_bad_one_good.yml  pos_dict_typo_modifier.yml  pos_list_of_dict_typo_modifier.yml  pos_multiple_bad_modifiers.yml  pos_unknown_field_bad_modifier.yml
tests/contrived/TAX003/: edge_empty_detection.yml  manifest.yml  neg_canonical_with_modifier.yml  neg_dict_canonical_field.yml  neg_list_of_dict_canonical.yml  neg_no_logsource_block.yml  neg_unknown_field_not_in_aliases.yml  neg_unknown_logsource_category.yml  pos_dict_alias_with_modifier.yml  pos_dict_imagepath_alias.yml  pos_list_of_dict_processname_alias.yml  pos_mixed_canonical_and_alias.yml  pos_multiple_aliases.yml
tests/fixtures/ATK001/: fail.yml  pass.yml  pass_lookalike.yml
tests/fixtures/ATK002/: fail.yml  pass.yml  pass_lookalike.yml
tests/fixtures/ATK003/: fail.yml  pass.yml  pass_lookalike.yml
tests/fixtures/ATK004/: fail.yml  pass.yml  pass_lookalike.yml
tests/fixtures/FP001/: fail.yml  pass.yml  pass_lookalike.yml
tests/fixtures/FP002/: fail.yml  pass.yml  pass_lookalike.yml
tests/fixtures/FP003/: fail.yml  pass.yml  pass_lookalike.yml
tests/fixtures/FP004/: fail.yml  pass.yml  pass_lookalike.yml
tests/fixtures/META001a/: fail.yml  pass.yml  pass_lookalike.yml
tests/fixtures/META001b/: fail.yml  pass.yml  pass_lookalike.yml
tests/fixtures/META002/: fail.yml  pass.yml  pass_lookalike.yml
tests/fixtures/META003/: fail.yml  pass.yml  pass_lookalike.yml
tests/fixtures/META004/: fail.yml  pass.yml  pass_lookalike.yml
tests/fixtures/META005/: fail.yml  pass.yml  pass_lookalike.yml
tests/fixtures/RED001/: fail.yml  pass.yml  pass_lookalike.yml
tests/fixtures/RED002/: fail.yml  pass.yml  pass_lookalike.yml
tests/fixtures/SCHEMA002/: fail.yml  pass.yml  pass_lookalike.yml
tests/fixtures/SCHEMA003/: fail.yml  pass.yml  pass_lookalike.yml
tests/fixtures/SCHEMA004/: fail.yml  pass.yml  pass_lookalike.yml
tests/fixtures/STY001/: fail.yml  pass.yml  pass_lookalike.yml
tests/fixtures/STY002/: fail.yaml  pass.yml  pass_lookalike.yml
tests/fixtures/STY003/: fail.yml  pass.yml  pass_lookalike.yml
tests/fixtures/TAX001/: fail.yml  pass.yml  pass_lookalike.yml
tests/fixtures/TAX002/: fail.yml  pass.yml  pass_lookalike.yml
tests/fixtures/TAX003/: fail.yml  pass.yml  pass_lookalike.yml
tests/fixtures/compound/: 01-broken-process-creation.yml  02-missing-metadata.yml  03-bad-attack-tags.yml  04-style-disaster.yml  05-noisy-network.yml  06-deprecated-modern.yml  07-missing-references.yml  08-broad-and-unsigned.yml  09-taxonomy-typos.yml  10-everything-wrong.yml  expected.json
tests/fixtures/reports/: golden.json
tests/integration/: test_cli.py  test_compound.py  test_rules_attack.py  test_rules_fp_risk.py  test_rules_metadata.py  test_rules_redundancy.py  test_rules_schema.py  test_rules_style.py  test_rules_taxonomy.py
tests/unit/cli/: test_cli_helpers.py  test_update_data.py
tests/unit/core/: test_condition.py  test_config.py  test_filters.py  test_profiles.py  test_registry.py  test_runner.py  test_scoring.py  test_types.py
tests/unit/data/: test_attack.py  test_corpus.py  test_sigma_schema.py  test_taxonomy.py
tests/unit/reporting/: test_reporters.py
