[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "sigmalint"
version = "0.1.0"
description = "ESLint-style linter for Sigma detection rules"
readme = "README.md"
license = "MIT"
authors = [{name = "Nishant Tyagi"}]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
]
dependencies = [
  "pyyaml>=6.0",
  "ruamel.yaml>=0.18",
  "jsonschema>=4.21",
  "typer>=0.12",
  "rich>=13.7",
  "requests>=2.31",
  "pyparsing>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "hypothesis>=6.100",
  "ruff>=0.5",
  "mypy>=1.10",
  "import-linter>=2.0",
  "pre-commit>=3.7",
  "types-PyYAML",
  "types-requests",
  "types-jsonschema",
]

[project.scripts]
sigmalint = "sigmalint.cli.main:app"

[project.urls]
Homepage = "https://github.com/ni5h4nt/sigmalint"
Issues = "https://github.com/ni5h4nt/sigmalint/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sigmalint"]

[tool.hatch.build.targets.wheel.force-include]
"src/sigmalint/data/vendored" = "sigmalint/data/vendored"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E","F","W","I","B","UP","SIM","RUF"]
# Notes on intentionally-disabled rule families for v0.1:
#  - ANN (type annotations): enforced by mypy on src/sigmalint via [tool.mypy].
#                            Avoids annotating fixtures and tests where it
#                            adds noise without value.
#  - D   (pydocstyle): rule documentation lives in docs/rules/<id>.md, not
#                      in docstrings. Tiny rule classes (Severity, Dimension,
#                      Finding, Rule subclasses) intentionally skip docstrings.
# Both rule families revisit when v0.2 broadens the strictness contract.

[tool.mypy]
python_version = "3.10"
files = ["src/sigmalint"]
# v0.1 baseline — catches real bugs without forcing exhaustive annotation.
# Tightened to `strict = true` in v0.2 once every snippet is fully typed.
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.coverage.run]
source = ["src/sigmalint"]
branch = true

[tool.coverage.report]
# The fail-under threshold is supplied on the CI command line so it can be
# ratcheted up as the codebase grows (Phase 1 starts at 0; Phase 8 raises to
# 60; Phase 22 raises to 90).
show_missing = true
